Fix spacing and renderVideos convert to arrow function.

--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -30,18 +30,31 @@
 }
 
  .App .components {
-  width: 90%;
+  width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  margin: 5%;
  }
 
  .App .comp-container {
-  width: 33.33%;
+  flex-basis: 20%;
   height: 10rem;
   padding: 2rem;
+  text-align: center;
  }
+
+.App h5 {
+  display: block;
+  font-size: 0.83em;
+  -webkit-margin-before: 0.5rem;
+  -webkit-margin-after: 0.5rem;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  font-weight: bold;
+
+  margin-top: .05rem;
+}
 
 .x-button {
   position: absolute;
